# E-Learning-Backend

./: .dockerignore  .env_sample  .gitignore  CONCURRENT_TEST_RESULTS.md  Dockerfile  README.md  create_admin.py  docker-compose.yaml  main.py  manage.py  pyproject.toml  test_api_complete.py  test_concurrent_completion.py  test_results.md  test_sequential_lessons.py
apps/authentication/: admin.py  custom_perms.py  managers.py  urls.py  utils.py
apps/authentication/filters/: roles.py
apps/authentication/management/commands/: create_perms.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: __init__.py  custom_users.py  perms.py
apps/authentication/perms/: custom_perms.py  perms_list.py
apps/authentication/serializers/: __init__.py  login.py  perms.py  signup.py  users.py
apps/authentication/views/: __init__.py  custom_users.py  perms.py
apps/course/: admin.py  apps.py  tasks.py  urls.py
apps/course/migrations/: 0001_initial.py
apps/course/models/: __init__.py  course.py  enrollment.py  lesson.py  progress.py
apps/course/serializers/: __init__.py  course.py  enrollment.py  lesson.py  progress.py
apps/course/views/: __init__.py  course.py  enrollment.py  lesson.py  progress.py
base/: models.py  serializers.py  urls.py
base/api_urls/v1/: urls.py
base/views/: generic_views.py  views.py
e_learning_backend/: asgi.py  db.py  logging.py  rest.py  settings.py  settings_config.py  simple_jwt.py  spectacular.py  urls.py  wsgi.py
